--- a/css/styles.css
+++ b/css/styles.css
@@ -24,6 +24,8 @@
 
 ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
 }
 
 body {
@@ -36,6 +38,13 @@ body {
 /* Header */
 .header-brg {
     background-color: var(--background-color-header);
+}
+
+.container {
+    margin-left: auto;
+    margin-right: auto;
+   width: 1200px;
+   outline: 2px solid tomato;
 }
 
 /* Logo */
@@ -78,6 +87,7 @@ body {
 }
 
 /* Contacts */
+
 .contacts .link {
     color: var(--secondary-text-color);
     text-decoration: none;
@@ -92,13 +102,19 @@ body {
 }
 
 /* Hero */
+.hero {
+    text-align: center;
+}
+
 .hero-title {
+    margin-top: 0;
+    margin-bottom: 30px;
+    
     background-color: var(--background-color-footer-hero);
     color: var(--accent-color);
         font-weight: 900;
         font-size: 44px;
         line-height: 1.36;
-        text-align: center;
         letter-spacing: 0.06em;
         text-transform: uppercase;
 }
@@ -109,6 +125,9 @@ body {
 }
 
 .section-title {
+    margin-top: 0;
+    margin-bottom: 50px;
+
     color:var(--primary-text-color);
     font-weight: 700;
         font-size: 36px;
@@ -117,8 +136,11 @@ body {
 }
 
 /* Features */
+
 .feature-list .title {
-    
+    margin-top: 0;
+    margin-bottom: 10px;
+
     font-weight: 700;
         font-size: 14px;
         line-height: 1.14;
@@ -126,6 +148,9 @@ body {
 }
 
 .desc-feature {
+margin-top: 0;
+margin-bottom: 0;
+
     font-weight: 400;
         font-size: 14px;
         line-height: 1.71;
@@ -133,8 +158,15 @@ body {
 }
 
 /* Command */
+.team-photo {
+    margin-top: 0;
+    margin-bottom: 30px;
+}
+
 .command-list .title {
-    
+    margin-top: 0;
+    margin-bottom: 10px;
+
 font-weight: 500;
     font-size: 16px;
     line-height: 1.19;
@@ -142,6 +174,9 @@ font-weight: 500;
 }
 
 .desc {
+    margin-top: 0;
+    margin-bottom: 0;
+
     font-weight: 400;
         font-size: 16px;
         line-height: 1.19;
@@ -171,8 +206,17 @@ font-weight: 500;
 
 /* Button */
 .button-hero {
+    display: inline-block;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    min-width: 200px;
+    padding: 10px 32px;
+    margin-top: 0;
+    margin-bottom: 200px;
+
     color: var(--white-color);
     background-color: var(--accent-color);
+
     font-family: inherit;
         font-weight: 700;
         font-size: 16px;
@@ -190,6 +234,12 @@ font-weight: 500;
 }
 
 .button-list .button {
+    display: inline-block;
+    border: 1px solid transparent;
+    min-width: 73px;
+    border-radius: 4px;
+    padding: 6px 22px;
+
     color: var(--primary-text-color);
     background-color: #F5F4FA;
 
@@ -215,6 +265,11 @@ background-color: var(--accent-color);
 /* Futer */
 .footer-brg {
     background-color: var(--background-color-footer-hero);
+}
+
+.address-list {
+    margin-top: 0;
+ margin-bottom: 9px;
 }
 
 .address-list .street {
