--- a/css/styles.css
+++ b/css/styles.css
@@ -36,16 +36,27 @@ body {
 }
 
 /* Header */
-.header-brg {
+.page-header {
     background-color: var(--background-color-header);
+    border: 1px solid #ECECEC;
+}
+
+.main-nav {
+    display: flex;
+    align-items: center;
+
 }
 
 .container {
     margin-left: auto;
     margin-right: auto;
    width: 1200px;
+   padding-left: 15px;
+   padding-right: 15px;
    outline: 2px solid tomato;
 }
+
+
 
 /* Logo */
 
@@ -68,7 +79,24 @@ body {
 
 
 /* Site-nav */
+.site-nav {
+display: flex;
+margin-left: 93px;
+}
+
+.site-nav .item {
+    /* background-color: tomato; */
+}
+
+.site-nav .item:not(:last-child) {
+    margin-right: 50px;
+}
+
 .site-nav .link {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
     color: var(--primary-text-color);
         font-weight: 500;
         font-size: 14px;
@@ -88,6 +116,15 @@ body {
 
 /* Contacts */
 
+.contacts {
+    display: flex;
+    margin-left: auto;
+}
+
+.contacts .item + .item {
+    margin-left: 50px;
+}
+
 .contacts .link {
     color: var(--secondary-text-color);
     text-decoration: none;
@@ -104,6 +141,7 @@ body {
 /* Hero */
 .hero {
     text-align: center;
+
 }
 
 .hero-title {
@@ -120,8 +158,17 @@ body {
 }
 
 /* Section */
+.section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+}
+
 .section-comand-brg {
-    background-color: var(--background-color-command);
+    padding-top: 94px;
+        padding-bottom: 94px;
+
+        background-color: var(--background-color-command);
+        
 }
 
 .section-title {
@@ -136,6 +183,15 @@ body {
 }
 
 /* Features */
+
+.feature-list {
+    display: flex;
+
+}
+
+.feature-list .item {
+    width: 270px;
+}
 
 .feature-list .title {
     margin-top: 0;
@@ -158,7 +214,7 @@ margin-bottom: 0;
 }
 
 /* Command */
-.team-photo {
+.command-list .team-photo {
     margin-top: 0;
     margin-bottom: 30px;
 }
@@ -173,7 +229,7 @@ font-weight: 500;
     letter-spacing: 0.03em;
 }
 
-.desc {
+.command-list .desc {
     margin-top: 0;
     margin-bottom: 0;
 
@@ -185,14 +241,20 @@ font-weight: 500;
 }
 
 /* Examples */
-.projects {
+.work-list .projects {
     margin-top: 0;
      margin-bottom: 20px;
+}
+
+.work-list .card {
+    border-bottom: 1px solid #EEEEEE;
+margin-bottom: 30px;
 }
 
 .work-list .title {
     margin-top: 0;
         margin-bottom: 4px;
+        
 
     color: var(--primary-text-color);
     font-weight: 700;
@@ -201,7 +263,7 @@ font-weight: 500;
         letter-spacing: 0.06em;
 }
 
-.text {
+.work-list .text {
     margin-top: 0;
         margin-bottom: 0;
 
@@ -278,7 +340,7 @@ background-color: var(--accent-color);
 }
 
 /* Futer */
-.footer-brg {
+.page-footer {
     background-color: var(--background-color-footer-hero);
 }
 
