--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ body {
     background-color:var(--background-color);
     color:var(--primary-text-color);
     font-family: Roboto, sans-serif;
-        letter-spacing: 0.03em;
+    letter-spacing: 0.03em;
 }
 
 /* Header */
@@ -82,10 +82,6 @@ body {
 .site-nav {
 display: flex;
 margin-left: 93px;
-}
-
-.site-nav .item {
-    /* background-color: tomato; */
 }
 
 .site-nav .item:not(:last-child) {
@@ -186,11 +182,17 @@ margin-left: 93px;
 
 .feature-list {
     display: flex;
+    flex-wrap: wrap;
 
 }
 
 .feature-list .item {
     width: 270px;
+    margin-right: 30px;
+}
+
+.feature-list .item:last-child {
+    margin-right: 0;
 }
 
 .feature-list .title {
@@ -213,7 +215,37 @@ margin-bottom: 0;
         color: var(--secondary-text-color);
 }
 
+/* What are we doing */
+
+.services {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.services .item {
+    width: 370px;
+    margin-right: 30px;
+}
+
+.services .item:last-child {
+    margin-right: 0;
+}
+
 /* Command */
+.command-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.command-list .card {
+    width: 270px;
+    margin-right: 30px;
+}
+
+.command-list .card:last-child {
+    margin-right: 0;
+}
+
 .command-list .team-photo {
     margin-top: 0;
     margin-bottom: 30px;
@@ -241,14 +273,31 @@ font-weight: 500;
 }
 
 /* Examples */
+
+.work-list {
+display: flex;
+flex-wrap: wrap;
+}
+
 .work-list .projects {
-    margin-top: 0;
-     margin-bottom: 20px;
+margin-top: 0;
+margin-bottom: 20px;
 }
 
 .work-list .card {
-    border-bottom: 1px solid #EEEEEE;
+border-bottom: 1px solid #EEEEEE;
 margin-bottom: 30px;
+margin-right: 30px;
+width: 370px;
+/* width: calc((100% - 60px) / 3); */
+}
+
+.work-list .card:nth-child(3n) {
+    margin-right: 0;
+}
+
+.work-list .card:nth-last-child(-n + 3) {
+    margin-bottom: 0;
 }
 
 .work-list .title {
@@ -306,14 +355,19 @@ margin-bottom: 30px;
     background-color: var(--white-color);
 }
 
+.button-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
 .button-list .button {
-    display: inline-block;
+
     border: 1px solid transparent;
     min-width: 73px;
     border-radius: 4px;
     padding: 6px 22px;
-    /* margin-top: 0;
-    margin-bottom: 0; */
+    margin-right: 8px;
 
     color: var(--primary-text-color);
     background-color: #F5F4FA;
@@ -325,6 +379,10 @@ margin-bottom: 30px;
     text-align: center;
     letter-spacing: 0.03em;
     cursor: pointer;
+}
+
+.button-list .button:last-child {
+    margin-right: 0;
 }
 
 .button-list .button:hover,
