--- a/css/styles.css
+++ b/css/styles.css
@@ -367,7 +367,6 @@ width: 370px;
     min-width: 73px;
     border-radius: 4px;
     padding: 6px 22px;
-    margin-right: 8px;
 
     color: var(--primary-text-color);
     background-color: #F5F4FA;
@@ -381,8 +380,8 @@ width: 370px;
     cursor: pointer;
 }
 
-.button-list .button:last-child {
-    margin-right: 0;
+.button-list > li:not(:last-child) {
+    margin-right: 8px;
 }
 
 .button-list .button:hover,
@@ -403,7 +402,7 @@ background-color: var(--accent-color);
 }
 
 .address-list {
-    margin-top: 0;
+margin-top: 0;
  margin-bottom: 9px;
 }
 
