--- a/css/styles.css
+++ b/css/styles.css
@@ -16,16 +16,19 @@
 
 /* цвета фонов */
     
---background-color-header: #FFFFFF;
+--background-color: #FFFFFF;
 --background-color-footer-hero: #2F303A;
 --background-color-command: #F5F4FA;
---background-color: #E5E5E5;
+
 }
 
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
+}
+img {
+    display: block;
 }
 
 body {
@@ -37,14 +40,12 @@ body {
 
 /* Header */
 .page-header {
-    background-color: var(--background-color-header);
     border: 1px solid #ECECEC;
 }
 
 .main-nav {
     display: flex;
     align-items: center;
-
 }
 
 .container {
@@ -137,15 +138,16 @@ margin-left: 93px;
 /* Hero */
 .hero {
     text-align: center;
-
+    padding-top: 200px;
+    padding-bottom: 200px;
+    background-color: var(--background-color-footer-hero);
 }
 
 .hero-title {
     margin-top: 0;
     margin-bottom: 30px;
-    
-    background-color: var(--background-color-footer-hero);
-    color: var(--accent-color);
+
+    color: var(--white-color);
         font-weight: 900;
         font-size: 44px;
         line-height: 1.36;
@@ -157,6 +159,10 @@ margin-left: 93px;
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
+}
+
+.section.feature {
+    padding-bottom: 0;
 }
 
 .section-comand-brg {
@@ -176,6 +182,10 @@ margin-left: 93px;
         font-size: 36px;
         line-height: 1.17;
         text-align: center;
+}
+
+.section-hidden-title {    
+        display: none;
 }
 
 /* Features */
@@ -246,9 +256,11 @@ margin-bottom: 0;
     margin-right: 0;
 }
 
-.command-list .team-photo {
-    margin-top: 0;
-    margin-bottom: 30px;
+
+.team-photo {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    text-align: center;
 }
 
 .command-list .title {
@@ -279,13 +291,13 @@ display: flex;
 flex-wrap: wrap;
 }
 
-.work-list .projects {
-margin-top: 0;
-margin-bottom: 20px;
+.projects {
+    padding: 20px 24px;
+    border: 1px solid #EEEEEE;
+    border-top: 0;
 }
 
 .work-list .card {
-border-bottom: 1px solid #EEEEEE;
 margin-bottom: 30px;
 margin-right: 30px;
 width: 370px;
@@ -333,8 +345,6 @@ width: 370px;
     border-radius: 4px;
     min-width: 200px;
     padding: 10px 32px;
-    margin-top: 0;
-    margin-bottom: 200px;
 
     color: var(--white-color);
     background-color: var(--accent-color);
@@ -359,6 +369,7 @@ width: 370px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    margin-bottom: 50px;
 }
 
 .button-list .button {
@@ -392,18 +403,21 @@ background-color: var(--accent-color);
 
 .button {
     font-family: inherit;
-    margin-bottom: 50px;
-    margin-top: 0;
 }
 
 /* Futer */
 .page-footer {
     background-color: var(--background-color-footer-hero);
+    padding-top: 60px;
+    padding-bottom: 60px;
 }
 
 .address-list {
-margin-top: 0;
- margin-bottom: 9px;
+margin-top: 20px;
+}
+
+.address-list>li:not(:last-child) {
+    margin-bottom: 9px;
 }
 
 .address-list .street {
